// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop Test 1`] = `
<div
  className="pf-c-backdrop"
>
  Backdrop
</div>
`;

exports[`Backdrop should match snapshot (auto-generated) 1`] = `
<div
  className="pf-c-backdrop ''"
>
  ReactNode
</div>
`;
